# mapped_hyph

./: Cargo.toml  README.md  cbindgen.toml  hyph_en_US.hyf  mapped_hyph.h  mmhyph.h
benches/: bench.rs
src/: builder.rs  ffi.rs  lib.rs  main.rs
tests/: base.hyf  compound.hyf  compound4.hyf  compound5.hyf  compound6.hyf  hyphen.hyf  lhmin.hyf  num.hyf  rhmin.hyf  settings2.hyf  settings3.hyf  test.rs
