[package]
name = "hyphenate"
version = "0.1.0"
authors = ["Jonathan Kew <jfkthame@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
arrayref = "0.3.5"
num = "0.2.0"

[lib]
name = "hyphenate"
crate-type = ["staticlib"]
